--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,106 @@
 body {
-	background-color:black;
-	color:white;
+    background-color:black;
+    color:white;
 }
 #home_container h1 {
-	font-size:500%;
-	margin-bottom:5%;
-	font-family:Poplar;
-	src: url('./PoplarStd.ttf');
+    font-size:750%;
+    margin-bottom:0px;
+    font-family:Poplar;
+    src: url('./PoplarStd.ttf');
+    letter-spacing:8px;
 }
 #home_container {
-	margin:0 auto;
-	margin-top:40vh;
-	width:-moz-fit-content;
-	width:-webkit-fit-content;
-	width:fit-content;
+    margin:0 auto;
+    margin-top:40vh;
+    width:-moz-fit-content;
+    width:-webkit-fit-content;
+    width:fit-content;
 }
 #home_menu {
-	display:flex;	
-	justify-content:space-between;
-	font-size:150%;
-	font-family:Helvetica;
+    display:flex;	
+    justify-content:space-between;
+    font-size:200%;
+    font-family:Courier New;
+    font-weight:bold;
+    letter-spacing:2px;
+    opacity:0;
+    animation:fade-in 1s 3s ease-in-out forwards;
 }
+.home-menu-item:before {
+    opacity:0;
+    content:">"; 
+    transition:all 0.2s ease;
+    color:#006c00;
+}
+.home-menu-item{
+    cursor:pointer;
+    transition:all 0.4s ease;
+}
+.home-menu-item:hover{
+    color:#006c00;
+}
+.home-menu-item:hover:before {
+    opacity:1;
+}
+.home-menu-item:after{
+    content:'';
+    top:-1px;
+    left:210px;
+    width:0;
+    height:0;
+    border-left:15px solid #006c00;
+    opacity:0;
+    transition:all 0.4s ease;
+}
+.home-menu-item:hover:after {
+    animation: blink 0.6s ease infinite;
+    opacity:1;
+}
+#name{
+    position:absolute;
+    margin:0;
+}
+#name:after {
+    animation: blink 0.6s ease infinite;
+    content:'';
+    top:-1px;
+    left:210px;
+    width:0;
+    height:0;
+    border-left:15px solid #ffffff;
+}
+#name.hidden:after {
+    opacity:0;
+    animation:none;
+}
+#subhead {
+    margin-top:-20px;
+    margin-bottom:0px;
+    text-align:center;
+    font-size:200%;
+    font-family:Courier;
+    letter-spacing:2px;
+    animation:fade-in 1s 2.5s ease-in-out forwards;
+    opacity:0;
+}
+
+@keyframes blink{
+    0% {opacity:0;}
+    50% {opacity:1;}
+    100%{opacity:0;}
+}
+
+@keyframes fade-in {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+
+@keyframes fade-out {
+    0% {opacity:1;}
+    100% {opacity:0;}
+}
+
 @font-face {
-	font-family: 'Poplar';
-	src url("./PoplarStd.ttf");
+    font-family: 'Poplar';
+    src url("./PoplarStd.ttf");
 }
