--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
 }
 h1 {
     font-family:Poplar;
+    font-weight:normal;
 }
 h2, p {
     font-family:Courier;
@@ -144,6 +145,21 @@ a:hover:after {
     font-family:Courier;
     text-decoration:none;
     font-size:18px;
+}
+#contact-bar {
+    display:flex;
+    justify-content:space-between;
+    width:500px;
+    margin:0 auto;
+    margin-top:50px;
+}
+.contact_button {
+    width:50px;
+    cursor:pointer;
+    transition:all 0.4s ease;
+}
+.contact_button:hover {
+    filter:invert(1);
 }
 
 @media screen and (max-width:700px) {
