--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ ul {
     display:none;
     width:250px;
 }
-a:before {
+a:before, .proj_select:before {
     opacity:0;
     content:">"; 
     transition:all 0.2s ease;
@@ -70,10 +70,10 @@ a{
     text-decoration:none;
     color:white;
 }
-a:hover{
+a:hover, .proj_select:hover{
     color:#006c00;
 }
-a:hover:before {
+a:hover:before, .proj_select:hover:before {
     opacity:1;
 }
 #contact-bar a:before {
@@ -82,7 +82,7 @@ a:hover:before {
 #contact-bar a:after {
     display:none;
 }
-a:after{
+a:after, .proj_select:after{
     content:'';
     top:-1px;
     left:210px;
@@ -92,7 +92,7 @@ a:after{
     opacity:0;
     transition:all 0.4s ease;
 }
-a:hover:after {
+a:hover:after, .proj_select:hover:after {
     animation: blink 0.6s ease infinite;
     opacity:1;
 }
@@ -189,6 +189,13 @@ a:hover:after {
 }
 .contact_button:hover {
     filter:invert(1);
+}
+.proj_select {
+    transition:all 0.4s ease;
+    cursor:pointer;
+}
+.selected {
+    color:green;
 }
 
 @media screen and (max-width:700px) {
