--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
+/**ALL**/
 body {
+    overflow-x:hidden !important;
     background-color:black;
     color:white;
     overflow:hidden;
@@ -16,13 +18,99 @@ ul {
     line-height:35px;
 }
 ::selection {
-    background: white;
-    color:black;
+    background: #006c00;
+    color:white;
 }
 ::-moz-selection {
-    background: white;
+    background: #006c00;
+    color:white;
+}
+a {
+    transition:all 0.4s ease;
+    text-decoration:none;
+    color:white;
+}
+a:hover, .proj_select:hover{
+    color:#006c00;
+}
+a:hover:before, .proj_select:hover:before {
+    opacity:1;
+}
+a:before, .proj_select:before {
+    opacity:0;
+    content:">"; 
+    transition:all 0.2s ease;
+    color:#006c00;
+}
+a:after, .proj_select:after{
+    content:'';
+    top:-1px;
+    left:210px;
+    width:0;
+    height:0;
+    border-left:15px solid #006c00;
+    opacity:0;
+    transition:all 0.4s ease;
+}
+a:hover:after, .proj_select:hover:after {
+    animation: blink 0.6s ease infinite;
+    opacity:1;
+}
+.body_container a{
     color:black;
 }
+.body_container h1{
+    margin-bottom:40px;
+}
+.page_heading {
+    font-family:Poplar;
+    font-size:100px;
+    padding:30px;
+    margin-bottom:-30px;
+    opacity:0;
+    animation:fade-in 1s ease forwards;
+}
+.page_subhead {
+    padding:20px;
+    font-family:Courier;
+    font-size:22px;
+    opacity:0;
+    animation:fade-in 1s ease forwards;
+}
+.body_container {
+    width:50%;
+    color:black;
+    margin:0 auto;
+    margin-top:100vh;
+    background-color:white;
+    height:auto;
+    animation:slide-up 0.4s ease forwards;
+}
+.body_heading {
+    font-size:80px;
+    padding:50px;
+    line-height:80px;
+}
+.body_p {
+    width:500px;
+    margin:0 auto;
+    font-size:18px;
+    line-height:35px;
+    font-family:Courier;
+}
+#subhead {
+    margin-top:-20px;
+    margin-bottom:0px;
+    text-align:center;
+    font-size:200%;
+    font-family:Courier;
+    letter-spacing:2px;
+    animation:fade-in 1s 2.5s ease-in-out forwards;
+    opacity:0;
+}
+
+
+/**HOME PAGE**/
 #home_container h1 {
     font-size:750%;
     margin-bottom:0px;
@@ -53,49 +141,6 @@ ul {
     display:none;
     width:250px;
 }
-a:before, .proj_select:before {
-    opacity:0;
-    content:">"; 
-    transition:all 0.2s ease;
-    color:#006c00;
-}
-.body_container a{
-    color:black;
-}
-.body_container h1{
-    margin-bottom:40px;
-}
-a{
-    transition:all 0.4s ease;
-    text-decoration:none;
-    color:white;
-}
-a:hover, .proj_select:hover{
-    color:#006c00;
-}
-a:hover:before, .proj_select:hover:before {
-    opacity:1;
-}
-#contact-bar a:before {
-    display:none;
-}
-#contact-bar a:after {
-    display:none;
-}
-a:after, .proj_select:after{
-    content:'';
-    top:-1px;
-    left:210px;
-    width:0;
-    height:0;
-    border-left:15px solid #006c00;
-    opacity:0;
-    transition:all 0.4s ease;
-}
-a:hover:after, .proj_select:hover:after {
-    animation: blink 0.6s ease infinite;
-    opacity:1;
-}
 #name{
     position:absolute;
     margin:0;
@@ -113,67 +158,14 @@ a:hover:after, .proj_select:hover:after {
     opacity:0;
     animation:none;
 }
-.page_heading {
-    font-family:Poplar;
-    font-size:100px;
-    padding:30px;
-    margin-bottom:-30px;
-    opacity:0;
-    animation:fade-in 1s ease forwards;
+
+
+/**CONTACT PAGE**/
+#contact-bar a:before {
+    display:none;
 }
-.page_subhead {
-    padding:20px;
-    font-family:Courier;
-    font-size:22px;
-    opacity:0;
-    animation:fade-in 1s ease forwards;
-}
-.body_container {
-    width:50%;
-    color:black;
-    margin:0 auto;
-    margin-top:100vh;
-    background-color:white;
-    height:auto;
-    animation:slide-up 0.4s ease forwards;
-}
-.body_container h1::selection, .body_container p::selection {
-    background:black;
-    color:white;
-}
-.body_container h1::-moz-selection, .body_container p::-moz-selection {
-    background:black;
-    color:white;
-}
-.body_heading {
-    font-size:80px;
-    padding:50px;
-    line-height:80px;
-}
-.body_p {
-    width:500px;
-    margin:0 auto;
-    font-size:18px;
-    line-height:35px;
-}
-#subhead {
-    margin-top:-20px;
-    margin-bottom:0px;
-    text-align:center;
-    font-size:200%;
-    font-family:Courier;
-    letter-spacing:2px;
-    animation:fade-in 1s 2.5s ease-in-out forwards;
-    opacity:0;
-}
-#split-list {
-    display:flex;
-    justify-content:space-around;
-}
-.split_list_part {
-    font-family:Courier;
-    text-decoration:none;
-    font-size:18px;
+#contact-bar a:after {
+    display:none;
 }
 #contact-bar {
     display:flex;
@@ -190,13 +182,65 @@ a:hover:after, .proj_select:hover:after {
 .contact_button:hover {
     filter:invert(1);
 }
+
+
+/**ABOUT PAGE**/
+#split-list {
+    display:flex;
+    justify-content:space-around;
+}
+.split_list_part {
+    font-family:Courier;
+    text-decoration:none;
+    font-size:18px;
+}
+
+
+/**PROJECTS PAGE**/
 .proj_select {
     transition:all 0.4s ease;
     cursor:pointer;
 }
-.selected {
+.project:hover .photo_container {
+    opacity:1; 
+    pointer-events:all;
+}
+.body_container.proj {
+    transition:all 0.1s ease;
+    opacity:0;
+    pointer-events:none;
+    position:absolute;
+    padding-bottom:50px;
+}
+.body_container.proj.selected {
+    opacity:1;
+    pointer-events:all;
+}
+.proj_select.selected {
     color:green;
 }
+.photo_container {
+    overflow:auto;
+    text-align:center;
+    width:40%;
+    background-color:white;
+    position:fixed;
+    top:0px;
+    pointer-events:none;
+    right:3vw;
+    height:100%;
+    opacity:0;
+    transition:all 0.4s ease;
+    padding-top:20px;
+}
+.photo_container img {
+    width:90%;
+    margin:10px;
+    margin-bottom:50px;
+    border: 1px solid grey;
+}
+
+
 
 @media screen and (max-width:700px) {
     #name {
