--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@ body {
     overflow-x:hidden !important;
     background-color:black;
     color:white;
-    overflow:hidden;
-    animation:delay-overflow 1s ease forwards;
+    /*overflow:hidden;
+    animation:delay-overflow 1s ease forwards;*/
     margin:0;
 }
 h1 {
@@ -46,7 +46,6 @@ a:before, .proj_select:before {
 a:after, .proj_select:after{
     content:'';
     top:-1px;
-    left:210px;
     width:0;
     height:0;
     border-left:15px solid #006c00;
@@ -232,8 +231,7 @@ a:hover:after, .proj_select:hover:after {
     padding-top:70px;
 }
 .body_container.proj {
-    transition:all 0.1s ease;
-    opacity:0;
+    transition:all 0.4s ease;
     pointer-events:none;
     position:absolute;
     padding-bottom:50px;
@@ -255,6 +253,7 @@ a:hover:after, .proj_select:hover:after {
     pointer-events:none;
     right:3vw;
     height:100%;
+    opacity:0;
     margin-top:-110vh;
     animation:slide-off-p 0.4s ease;
     padding-top:20px;
@@ -398,7 +397,7 @@ a:hover:after, .proj_select:hover:after {
 
 @keyframes slide-off-p {
     0% {margin-top:0px;}
-    100%{margin-top:-110vh;}
+    100%{margin-top:-105vh;}
 }
 
 @keyframes delay-overflow {
