--- a/styles.css
+++ b/styles.css
@@ -142,11 +142,13 @@ a:hover:after, .proj_select:hover:after {
     margin-bottom:0px;
     src: url('./PoplarStd.ttf');
     letter-spacing:8px;
+    white-space:nowrap;
 }
 #home_container {
     margin:0 auto;
     margin-top:40vh;
     width:662px;
+    transition:opacity 0.4s ease;
 }
 #home_menu {
     display:flex;	
@@ -291,6 +293,7 @@ a:hover:after, .proj_select:hover:after {
 @media screen and (max-width:960px) {
     #home_hr {
         display:none;
+        margin-bottom:20px;
     }
     #name {
         text-align:center;
@@ -311,12 +314,14 @@ a:hover:after, .proj_select:hover:after {
     #home_container h1 {
         margin-bottom:-40px;
         width:100%;
+        white-space:inherit;
     }
     .home-div-1 {
         display:none;
     }
     .home-div-2 {
         display:initial;
+        margin-bottom:20px;
     }
     .body_container {
         width:100%;
